# PlayGround

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_OLD.md  main.py  pyproject.toml
.scaffold/python-uv/: AGENTS.md  README.md  pyproject.toml
.scaffold/python-uv/src/__MODULE_NAME__/: __main__.py
AI_Elements/: .env.sample  .eslintrc.cjs  .gitignore  .prettierrc  AGENTS.md  DESIGN.md  package-lock.json  package.json  postcss.config.js  tsconfig.json
Ai-SDK_chatUI/: .gitignore  .mcp.json  AGENTS.md  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json  実装スケジュール.md  設計.md
AutoSlideGen/: .env.test_example  .env_example  .gitignore  CLAUDE.md  DEPLOY_GUIDE.md  Googleスライドが一瞬で完成する奇跡のプロンプト.txt  README.md  config.toml  create_PowerPoint.py  create_PowerPoint_Separate.py  get_url_lambda.py  lambda-pptx-generator.py  lambda-pptx-get_download_url.py  lambda_function.py  pyproject.toml  test_API.py  test_get_url_local.py  test_lambda.py  test_local.py
Excel/: .env.example  .gitignore  README.md  README_auto_transfer.md  config.json  config.toml  excel_book_comparator.py  excel_book_comparator_copy.py  generic_structure_processor.py  pyproject.toml  requirements.txt  simple_range_comparator.py  smart_range_comparator.py
Excel/.claude/: settings.local.json
Excel/.serena/: project.yml
Excel/scripts/: cipher_mcp.sh
lambda-layer/: Dockerfile  FINAL_SOLUTION.md  LAMBDA_DEPLOYMENT_GUIDE.md  README.md  build-exact-layer.sh  lambda-container-solution.md  test_lambda_imports.py
scripts/: scaffold_module.sh
スライド自動作成/: create_PowerPoint.py  (+8 more)
(+117 files in other folders)
