[project]
name = "excel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "chromadb>=1.0.20",
    "numpy>=2.3.2",
    "openai>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
    "pywin32>=306",
]
